# xenia-android

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  gradlew  settings.gradle  setup.sh  src  third_party  xenia-upstream.patch
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  debug_window_stubs.cc  discord_stubs.c  ffmpeg_stubs.c
app/src/main/cpp/custom_include/glslang/: build_info.h
app/src/main/cpp/jni/: windowed_app_jni.cc  xenia_jni_utils.cc  xenia_jni_utils.h
app/src/main/java/com/xenia/android/: XeniaRuntimeException.java
app/src/main/java/com/xenia/android/emulator/: EmulatorActivity.java  GpuTraceViewerActivity.java  TouchControllerOverlay.java  WindowSurfaceView.java  WindowedAppActivity.java
app/src/main/java/com/xenia/android/ui/: GameLibraryAdapter.java  MainActivity.java  SettingsActivity.java
app/src/main/java/com/xenia/android/utils/: GameEntry.java  GameLibraryManager.java  PathUtils.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_emulator.xml  activity_gpu_trace_viewer.xml  activity_main.xml  activity_settings.xml  item_game.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  preferences.xml
patches/: emulator.cc
patches/app/: xenia_main.cc
patches/base/: logging.cc  main_android.cc  main_android.h  system_android.cc
patches/hid/: android_input_driver.cc  android_input_driver.h
patches/kernel/: user_module.cc  user_module.h
patches/ui/: windowed_app_context_android.cc  windowed_app_context_android.h
